css/style.css
/* ---------- Globals ---------- */
body {
    font-family: Arial, sans-serif;
    background-color: white;
    color: #5a3e1b;
    font-family: 'Courier New', Courier, monospace;
    margin: 0;
    padding: 0;
    text-align: center;
    max-width: 100vw;
    overflow-y: visible;
    overflow-x: hidden;
}

/* ============ Global Section Base ============ */
.section-base {
    width: 100%;
    box-sizing: border-box;
    display: flex;
    position: relative;
    height: auto;
}

/* ============ Global Heading Main ============ */
.heading-main {
    font-size: 80px;
    font-weight: bold;
    font-family: playfair-display, serif;
    margin: 0;
    color: #fff;
}

/* ============ Global Text Container Base ============ */
.text-container-base {
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    color: #fff;
    gap: 20px;
    text-align: left;
    align-items: flex-start;
    justify-content: flex-start;
}


/* ============ Global Button Style ============ */
.main-button {
    text-decoration: none;
    color: black;
    background: #F0D67F;
    padding: 10px 28px;
    border: none;
    padding-top: 14px;
    padding-bottom: 14px;
    font-weight: 600;
    font-size: 16px;
    transition: background 0.2s, color 0.2s;
}


.main-button:hover{
    background-color: bisque;
    cursor: pointer;
}

/* ============ Global Text and text color ============ */

.text-black {
    color: black !important;
}

.text-container {
    box-sizing: border-box;
    width: 650px;
    max-width: calc(100vw - 100px);
    margin-left: 0;
    align-items: flex-start;
    justify-content: flex-start;
    gap: 20px;
    text-align: left;
    display: flex;
    flex-direction: column;
    color: #fff;
}

.text-description {
    margin-bottom: 50px;
    color: #fff;
}

.text {
    width: 400px;
    color: #fff;
}

.text-container h2 {
    width: 105%;
    font-size: 80px;
    font-weight: bold;
    word-spacing: 0.5px;
    font-family: playfair-display, serif;
    color: #fff;
    margin: 0;
}


/* ============ Global Text and text color quries ============ */

@media (max-width: 1024px) {

    .text-container {
        width: 100%;
        max-width: none;
        margin-right: 0;
    }

    .text {
        width: 100%;
        max-width: 100%;
    }

}

@media (max-width: 900px) {

    .text-container {
        width: 100%;
        max-width: 100%;
        padding: 0;
        margin: 0;
    }

    .text {
        width: 100%;
        max-width: 100%;
    }
}

@media (max-width: 1024px) {
    .text-container {
        width: 100%;
        max-width: none;
        margin-right: 0;
    }

    .text {
        width: 100%;
        max-width: 100%;
    }
}

@media (max-width: 600px) {
    .text-container {
        width: 100%;
        max-width: 100%;
        padding: 0;
        margin: 0;
    }

    .text {
        width: 100%;
        max-width: 100%;
    }
}

